--- a/website/doccer/static/doccer/css/plotstyle.css
+++ b/website/doccer/static/doccer/css/plotstyle.css
@@ -1,4 +1,13 @@
 #plot {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 70%;
+}
+
+#named_entities {
+    width: 100%;
+    height: 20%;
+}
+
+#navbar-text {
+    color: white;
 }
