--- a/website/doccer/templates/doccer/plot.html
+++ b/website/doccer/templates/doccer/plot.html
@@ -2,15 +2,31 @@
     <title>Plot</title>
     {% load static %}
     <script type="text/javascript" src="{% static 'doccer/js/plotly-latest.min.js' %}"> </script>
-    <!--script type="text/javascript" src="{% static 'doccer/js/plot.json' %}"></script-->
     <script type="text/javascript" src="{% static 'doccer/js/plotter.js' %}"></script>
-    <!--link rel="stylesheet" href="{% static 'doccer/css/plotstyle.css' %}"-->
+    <link rel="stylesheet" href="{% static 'doccer/css/plotstyle.css' %}">
+    <link rel="stylesheet" href="{% static 'doccer/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'doccer/css/bootstrap-grid.css' %}">
+    <link rel="stylesheet" href="{% static 'doccer/css/bootstrap-reboot.css' %}">
+
 </head>
 <body>
-    <div id="plot" style="width: 800px; height: 500px;">
+    <nav class="navbar navbar-light bg-dark">
+        <a class="navbar-brand" id="navbar-text" href="#">P14B56</a>
+    </nav>
+
+    <!--button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button-->
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home</a>
+        </div>
+    </div>
+
+    <div id="plot">
 
     </div>
-    <div id="named_entities" style="width: 500px; height: 300px;">
+    <div id="named_entities">
 
     </div>
 </body>
