Done: Web done ToDo : lol

--- a/website/doccer/templates/doccer/plot.html
+++ b/website/doccer/templates/doccer/plot.html
@@ -26,8 +26,15 @@
     <div id="plot">
 
     </div>
-    <div id="named_entities">
-
+    <div class="row">
+        <div class="col" align="center">
+            <div id="named_entities"  class="jumbotron jumbotron-fluid col-md-10">
+                <div class="container">
+                    <h3 id="named_entities_filename">Fluid jumbotron</h3>
+                    <p id="named_entities_text" class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script type="text/javascript">
