--- a/website/doccer/static/doccer/css/plotstyle.css
+++ b/website/doccer/static/doccer/css/plotstyle.css
@@ -3,9 +3,12 @@
     height: 70%;
 }
 
-#named_entities {
+#named_entities_text {
     width: 100%;
     height: 20%;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-top: 30px;
 }
 
 #navbar-text {
