--- a/website/static/doccer/css/plotstyle.css
+++ b/website/static/doccer/css/plotstyle.css
@@ -1,4 +1,16 @@
 #plot {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 70%;
+}
+
+#named_entities_text {
+    width: 100%;
+    height: 20%;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-top: 30px;
+}
+
+#navbar-text {
+    color: white;
 }
