--- a/website/doccer/templates/doccer/plot.html
+++ b/website/doccer/templates/doccer/plot.html
@@ -26,12 +26,12 @@
     <div id="plot">
 
     </div>
-    <div class="row">
+    <div class="row" id="named_entities">
         <div class="col" align="center">
-            <div id="named_entities"  class="jumbotron jumbotron-fluid col-md-10">
+            <div class="col-md-10">
                 <div class="container">
-                    <h3 id="named_entities_filename">Fluid jumbotron</h3>
-                    <p id="named_entities_text" class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                    <h3 id="named_entities_filename">Named Entities</h3>
+                    <p id="named_entities_text" class="lead"> </p>
                 </div>
             </div>
         </div>
