--- a/website/static/doccer/css/plotstyle.css
+++ b/website/static/doccer/css/plotstyle.css
@@ -8,9 +8,12 @@
     height: 20%;
     margin-left: 50px;
     margin-right: 50px;
+    margin-bottom: 100px;
     padding-top: 30px;
 }
 
 #navbar-text {
     color: white;
 }
+
+.jumbotron {  background-size: cover; }
