Done: Offline file clustering done ToDo : lol

--- a/website/doccer/static/doccer/css/homepage.css
+++ b/website/doccer/static/doccer/css/homepage.css
@@ -25,6 +25,10 @@
     vertical-align: bottom;
 }
 
+#offline_submit {
+    margin-top: 10px;
+}
+
 .modal {
     display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
