Done: Streamlining ToDo : lol

--- a/website/doccer/templates/doccer/index.html
+++ b/website/doccer/templates/doccer/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col" align="center">
                 <input class="form-control col-md-3" id="files_list" type="file" webkitdirectory directory multiple oninput="filelist(event)">
-                <button type="button" class="btn btn-info" onclick="submitoffline()" id="offline_submit">Submit</button>
+                <button type="button" class="btn btn-primary" onclick="submitoffline()" id="offline_submit">Submit</button>
             </div>
         </div>
     </form>
