--- a/website/doccer/static/doccer/css/homepage.css
+++ b/website/doccer/static/doccer/css/homepage.css
@@ -44,7 +44,7 @@
 
 .modal-header {
     padding: 2px 16px;
-    background-color: #E80044;
+    background-color: #CC0000;
     color: white;
 }
 
@@ -71,5 +71,5 @@
 
 @keyframes animatetop {
     from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
+    to {top: 0px; opacity: 1}
 }
