Done: almost ToDo : lol

--- a/website1/nlpPipeline1/templates/nlpPipeline1/plot.html
+++ b/website1/nlpPipeline1/templates/nlpPipeline1/plot.html
@@ -5,8 +5,8 @@
     <script type="text/javascript" src="{% static 'nlpPipeline1/js/plotter.js' %}"></script>
     <link rel="stylesheet" href="{% static 'nlpPipeline1/css/plotstyle.css' %}">
     <link rel="stylesheet" href="{% static 'nlpPipeline1/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'nlpPipeline1/css/bootstrap-grid.css' %}">
-    <link rel="stylesheet" href="{% static 'nlpPipeline1/css/bootstrap-reboot.css' %}">
+    <!--link rel="stylesheet" href="{% static 'nlpPipeline1/css/bootstrap-grid.css' %}"-->
+    <!--link rel="stylesheet" href="{% static 'nlpPipeline1/css/bootstrap-reboot.css' %}"-->
 
 </head>
 <body>
