--- a/website1/nlpPipeline1/templates/nlpPipeline1/index.html
+++ b/website1/nlpPipeline1/templates/nlpPipeline1/index.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col" align="center">
                 <input class="form-control col-md-3" id="files_list" type="file" webkitdirectory directory multiple oninput="filelist(event)">
-                <button type="button" class="btn btn-danger" onclick="submitoffline()" id="offline_submit">Submit</button>
+                <button type="button" class="btn btn-primary" onclick="submitoffline()" id="offline_submit">Submit</button>
             </div>
         </div>
     </form>
