--- a/website1/nlpPipeline1/templates/nlpPipeline1/plot.html
+++ b/website1/nlpPipeline1/templates/nlpPipeline1/plot.html
@@ -23,9 +23,29 @@
         </div>
     </div>
 
-    <div id="plot">
+    <div class="row">
+        <div class="col col-md-8">
+            <div id="plot">
 
+            </div>
+        </div>
+        <div class="col col-md-4">
+            <div class="card" id="cluster_details">
+                <div class="card-header">
+                    Cluster Details
+                </div>
+                <div class="card-body" id="num_clusters">
+
+                </div>
+                <ul class="list-group list-group-flush" id="cluster_details_list">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul>
+            </div>
+        </div>
     </div>
+
     <div class="row" id="named_entities">
         <div class="col" align="center">
             <div class="col-md-10">
